parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDEQUAL
    ASIGNACION
    COMENTARIO
    ELSE
    ELSEIF
    POP
    PUNTO
    SIGNOID

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> asignacion
Rule 2     sentencias -> echo
Rule 3     sentencias -> funcion
Rule 4     sentencias -> print
Rule 5     sentencias -> operadorAritmetico
Rule 6     sentencias -> return
Rule 7     sentencias -> estructurasDeDatos
Rule 8     sentencias -> estructurasControl
Rule 9     sentencias -> operaciones
Rule 10    valores -> valor
Rule 11    valores -> valor COMA valores
Rule 12    NUMERO -> ENTERO
Rule 13    NUMERO -> FLOTANTE
Rule 14    valor -> NUMERO
Rule 15    valor -> CADENA
Rule 16    valor -> BOOLEAN
Rule 17    valor -> IDENTIFICADOR
Rule 18    comparadorNum -> MAYORQUE
Rule 19    comparadorNum -> MAYORIGUALQUE
Rule 20    comparadorNum -> MENORQUE
Rule 21    comparadorNum -> MENORIGUALQUE
Rule 22    comparador -> IDENTICO
Rule 23    comparador -> NOIDENTICO
Rule 24    comparador -> IGUAL
Rule 25    variable -> NUMERO
Rule 26    variable -> IDENTIFICADOR
Rule 27    comparaciones -> comparacion
Rule 28    comparaciones -> comparacion operadores comparaciones
Rule 29    comparacion -> variable comparadorNum variable
Rule 30    comparacion -> valor comparador valor
Rule 31    incrementoDecremento -> INCREMENTO
Rule 32    incrementoDecremento -> DECREMENTO
Rule 33    incrementoDecremento -> SUMA ENTERO
Rule 34    incrementoDecremento -> RESTA ENTERO
Rule 35    operadores -> OPERADOR
Rule 36    operadores -> AND
Rule 37    operadores -> OR
Rule 38    operaciones -> operacion
Rule 39    operaciones -> operacion operadorAritmetico operaciones
Rule 40    operaciones -> IDENTIFICADOR ASIGNAR operaciones
Rule 41    operacion -> variable operadorAritmetico variable
Rule 42    operadorAritmetico -> SUMA
Rule 43    operadorAritmetico -> RESTA
Rule 44    operadorAritmetico -> MULT
Rule 45    operadorAritmetico -> DIVISION
Rule 46    operadorAritmetico -> DIVISIONENTERA
Rule 47    operadorAritmetico -> MODULO
Rule 48    operadorAritmetico -> POTENCIA
Rule 49    asignacion -> IDENTIFICADOR ASIGNAR valor PUNTOCOMA
Rule 50    print -> PRINT PARENIZ valores PARENDER PUNTOCOMA
Rule 51    print -> PRINT valor PUNTOCOMA
Rule 52    print -> PRINT PARENIZ PARENDER PUNTOCOMA
Rule 53    echo -> ECHO valores PUNTOCOMA
Rule 54    funcion -> FUNCTION NAMEFUNCTION PARENIZ parametro PARENDER LLAVEIZ
Rule 55    parametro -> IDENTIFICADOR
Rule 56    parametro -> IDENTIFICADOR COMA parametro
Rule 57    funcion -> NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
Rule 58    funcion -> IDENTIFICADOR ASIGNAR NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
Rule 59    return -> RETURN IDENTIFICADOR PUNTOCOMA
Rule 60    estructurasControl -> while
Rule 61    estructurasControl -> for
Rule 62    estructurasControl -> if
Rule 63    estructurasControl -> foreach
Rule 64    estructurasControl -> switch
Rule 65    while -> WHILE PARENIZ comparaciones PARENDER LLAVEIZ
Rule 66    for -> FOR PARENIZ IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ
Rule 67    foreach -> FOREACH PARENIZ IDENTIFICADOR AS IDENTIFICADOR PARENDER LLAVEIZ
Rule 68    switch -> SWITCH PARENIZ valor PARENDER LLAVEIZ casos DEFAULT DOSPUNTOS echo LLAVEDER
Rule 69    casos -> caso
Rule 70    casos -> caso casos
Rule 71    caso -> CASE valor DOSPUNTOS echo BREAK PUNTOCOMA
Rule 72    if -> IF PARENIZ comparaciones PARENDER LLAVEIZ
Rule 73    if -> IF PARENIZ IDENTIFICADOR PARENDER LLAVEIZ
Rule 74    estructurasDeDatos -> queue
Rule 75    estructurasDeDatos -> stack
Rule 76    estructurasDeDatos -> array
Rule 77    stack -> IDENTIFICADOR FLECHASIMPLE PUSH PARENIZ valor PARENDER PUNTOCOMA
Rule 78    stack -> IDENTIFICADOR ASIGNAR NEW STACK PARENIZ PARENDER PUNTOCOMA
Rule 79    stack -> IDENTIFICADOR FLECHASIMPLE NEXT PARENIZ PARENDER PUNTOCOMA
Rule 80    stack -> IDENTIFICADOR FLECHASIMPLE REWIND PARENIZ PARENDER PUNTOCOMA
Rule 81    stack -> IDENTIFICADOR FLECHASIMPLE CURRENT PARENIZ PARENDER PUNTOCOMA
Rule 82    stack -> IDENTIFICADOR FLECHASIMPLE VALID PARENIZ PARENDER
Rule 83    queue -> IDENTIFICADOR ASIGNAR NEW QUEUE PARENIZ PARENDER PUNTOCOMA
Rule 84    queue -> IDENTIFICADOR FLECHASIMPLE ENQUEUE PARENIZ valor PARENDER PUNTOCOMA
Rule 85    queue -> IDENTIFICADOR FLECHASIMPLE COUNT PARENIZ PARENDER PUNTOCOMA
Rule 86    queue -> IDENTIFICADOR FLECHASIMPLE DEQUEUE PARENIZ PARENDER PUNTOCOMA
Rule 87    queue -> IDENTIFICADOR FLECHASIMPLE NEXT PARENIZ PARENDER PUNTOCOMA
Rule 88    queue -> IDENTIFICADOR FLECHASIMPLE REWIND PARENIZ PARENDER PUNTOCOMA
Rule 89    queue -> IDENTIFICADOR FLECHASIMPLE CURRENT PARENIZ PARENDER PUNTOCOMA
Rule 90    queue -> IDENTIFICADOR FLECHASIMPLE VALID PARENIZ PARENDER
Rule 91    array -> IDENTIFICADOR ASIGNAR ARRAY PARENIZ valores PARENDER PUNTOCOMA
Rule 92    array -> IDENTIFICADOR ASIGNAR CORCHETEIZ valores CORCHETEDER PUNTOCOMA

Terminals, with rules where they appear

AND                  : 36
ANDEQUAL             : 
ARRAY                : 91
AS                   : 67
ASIGNACION           : 
ASIGNAR              : 40 49 58 66 78 83 91 92
BOOLEAN              : 16
BREAK                : 71
CADENA               : 15
CASE                 : 71
COMA                 : 11 56
COMENTARIO           : 
CORCHETEDER          : 92
CORCHETEIZ           : 92
COUNT                : 85
CURRENT              : 81 89
DECREMENTO           : 32
DEFAULT              : 68
DEQUEUE              : 86
DIVISION             : 45
DIVISIONENTERA       : 46
DOSPUNTOS            : 68 71
ECHO                 : 53
ELSE                 : 
ELSEIF               : 
ENQUEUE              : 84
ENTERO               : 12 33 34 66 66
FLECHASIMPLE         : 77 79 80 81 82 84 85 86 87 88 89 90
FLOTANTE             : 13
FOR                  : 66
FOREACH              : 67
FUNCTION             : 54
IDENTICO             : 22
IDENTIFICADOR        : 17 26 40 49 55 56 58 59 66 66 66 67 67 73 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
IF                   : 72 73
IGUAL                : 24
INCREMENTO           : 31
LLAVEDER             : 68
LLAVEIZ              : 54 65 66 67 68 72 73
MAYORIGUALQUE        : 19
MAYORQUE             : 18
MENORIGUALQUE        : 21
MENORQUE             : 20
MODULO               : 47
MULT                 : 44
NAMEFUNCTION         : 54 57 58
NEW                  : 78 83
NEXT                 : 79 87
NOIDENTICO           : 23
OPERADOR             : 35
OR                   : 37
PARENDER             : 50 52 54 57 58 65 66 67 68 72 73 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
PARENIZ              : 50 52 54 57 58 65 66 67 68 72 73 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
POP                  : 
POTENCIA             : 48
PRINT                : 50 51 52
PUNTO                : 
PUNTOCOMA            : 49 50 51 52 53 57 58 59 66 66 71 77 78 79 80 81 83 84 85 86 87 88 89 91 92
PUSH                 : 77
QUEUE                : 83
RESTA                : 34 43
RETURN               : 59
REWIND               : 80 88
SIGNOID              : 
STACK                : 78
SUMA                 : 33 42
SWITCH               : 68
VALID                : 82 90
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

NUMERO               : 14 25
array                : 76
asignacion           : 1
caso                 : 69 70
casos                : 68 70
comparacion          : 27 28
comparaciones        : 28 65 72
comparador           : 30
comparadorNum        : 29 66
echo                 : 2 68 71
estructurasControl   : 8
estructurasDeDatos   : 7
for                  : 61
foreach              : 63
funcion              : 3
if                   : 62
incrementoDecremento : 66
operacion            : 38 39
operaciones          : 9 39 40
operadorAritmetico   : 5 39 41
operadores           : 28
parametro            : 54 56 57 58
print                : 4
queue                : 74
return               : 6
sentencias           : 0
stack                : 75
switch               : 64
valor                : 10 11 30 30 49 51 68 71 77 84
valores              : 11 50 53 91 92
variable             : 29 29 41 41
while                : 60

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . asignacion
    (2) sentencias -> . echo
    (3) sentencias -> . funcion
    (4) sentencias -> . print
    (5) sentencias -> . operadorAritmetico
    (6) sentencias -> . return
    (7) sentencias -> . estructurasDeDatos
    (8) sentencias -> . estructurasControl
    (9) sentencias -> . operaciones
    (49) asignacion -> . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (53) echo -> . ECHO valores PUNTOCOMA
    (54) funcion -> . FUNCTION NAMEFUNCTION PARENIZ parametro PARENDER LLAVEIZ
    (57) funcion -> . NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (58) funcion -> . IDENTIFICADOR ASIGNAR NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (50) print -> . PRINT PARENIZ valores PARENDER PUNTOCOMA
    (51) print -> . PRINT valor PUNTOCOMA
    (52) print -> . PRINT PARENIZ PARENDER PUNTOCOMA
    (42) operadorAritmetico -> . SUMA
    (43) operadorAritmetico -> . RESTA
    (44) operadorAritmetico -> . MULT
    (45) operadorAritmetico -> . DIVISION
    (46) operadorAritmetico -> . DIVISIONENTERA
    (47) operadorAritmetico -> . MODULO
    (48) operadorAritmetico -> . POTENCIA
    (59) return -> . RETURN IDENTIFICADOR PUNTOCOMA
    (74) estructurasDeDatos -> . queue
    (75) estructurasDeDatos -> . stack
    (76) estructurasDeDatos -> . array
    (60) estructurasControl -> . while
    (61) estructurasControl -> . for
    (62) estructurasControl -> . if
    (63) estructurasControl -> . foreach
    (64) estructurasControl -> . switch
    (38) operaciones -> . operacion
    (39) operaciones -> . operacion operadorAritmetico operaciones
    (40) operaciones -> . IDENTIFICADOR ASIGNAR operaciones
    (83) queue -> . IDENTIFICADOR ASIGNAR NEW QUEUE PARENIZ PARENDER PUNTOCOMA
    (84) queue -> . IDENTIFICADOR FLECHASIMPLE ENQUEUE PARENIZ valor PARENDER PUNTOCOMA
    (85) queue -> . IDENTIFICADOR FLECHASIMPLE COUNT PARENIZ PARENDER PUNTOCOMA
    (86) queue -> . IDENTIFICADOR FLECHASIMPLE DEQUEUE PARENIZ PARENDER PUNTOCOMA
    (87) queue -> . IDENTIFICADOR FLECHASIMPLE NEXT PARENIZ PARENDER PUNTOCOMA
    (88) queue -> . IDENTIFICADOR FLECHASIMPLE REWIND PARENIZ PARENDER PUNTOCOMA
    (89) queue -> . IDENTIFICADOR FLECHASIMPLE CURRENT PARENIZ PARENDER PUNTOCOMA
    (90) queue -> . IDENTIFICADOR FLECHASIMPLE VALID PARENIZ PARENDER
    (77) stack -> . IDENTIFICADOR FLECHASIMPLE PUSH PARENIZ valor PARENDER PUNTOCOMA
    (78) stack -> . IDENTIFICADOR ASIGNAR NEW STACK PARENIZ PARENDER PUNTOCOMA
    (79) stack -> . IDENTIFICADOR FLECHASIMPLE NEXT PARENIZ PARENDER PUNTOCOMA
    (80) stack -> . IDENTIFICADOR FLECHASIMPLE REWIND PARENIZ PARENDER PUNTOCOMA
    (81) stack -> . IDENTIFICADOR FLECHASIMPLE CURRENT PARENIZ PARENDER PUNTOCOMA
    (82) stack -> . IDENTIFICADOR FLECHASIMPLE VALID PARENIZ PARENDER
    (91) array -> . IDENTIFICADOR ASIGNAR ARRAY PARENIZ valores PARENDER PUNTOCOMA
    (92) array -> . IDENTIFICADOR ASIGNAR CORCHETEIZ valores CORCHETEDER PUNTOCOMA
    (65) while -> . WHILE PARENIZ comparaciones PARENDER LLAVEIZ
    (66) for -> . FOR PARENIZ IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ
    (72) if -> . IF PARENIZ comparaciones PARENDER LLAVEIZ
    (73) if -> . IF PARENIZ IDENTIFICADOR PARENDER LLAVEIZ
    (67) foreach -> . FOREACH PARENIZ IDENTIFICADOR AS IDENTIFICADOR PARENDER LLAVEIZ
    (68) switch -> . SWITCH PARENIZ valor PARENDER LLAVEIZ casos DEFAULT DOSPUNTOS echo LLAVEDER
    (41) operacion -> . variable operadorAritmetico variable
    (25) variable -> . NUMERO
    (26) variable -> . IDENTIFICADOR
    (12) NUMERO -> . ENTERO
    (13) NUMERO -> . FLOTANTE

    IDENTIFICADOR   shift and go to state 11
    ECHO            shift and go to state 12
    FUNCTION        shift and go to state 13
    NAMEFUNCTION    shift and go to state 14
    PRINT           shift and go to state 15
    SUMA            shift and go to state 16
    RESTA           shift and go to state 17
    MULT            shift and go to state 18
    DIVISION        shift and go to state 19
    DIVISIONENTERA  shift and go to state 20
    MODULO          shift and go to state 21
    POTENCIA        shift and go to state 22
    RETURN          shift and go to state 23
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    IF              shift and go to state 36
    FOREACH         shift and go to state 37
    SWITCH          shift and go to state 38
    ENTERO          shift and go to state 35
    FLOTANTE        shift and go to state 41

    sentencias                     shift and go to state 1
    asignacion                     shift and go to state 2
    echo                           shift and go to state 3
    funcion                        shift and go to state 4
    print                          shift and go to state 5
    operadorAritmetico             shift and go to state 6
    return                         shift and go to state 7
    estructurasDeDatos             shift and go to state 8
    estructurasControl             shift and go to state 9
    operaciones                    shift and go to state 10
    queue                          shift and go to state 24
    stack                          shift and go to state 25
    array                          shift and go to state 26
    while                          shift and go to state 27
    for                            shift and go to state 28
    if                             shift and go to state 29
    foreach                        shift and go to state 30
    switch                         shift and go to state 31
    operacion                      shift and go to state 32
    variable                       shift and go to state 39
    NUMERO                         shift and go to state 40

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> asignacion .

    $end            reduce using rule 1 (sentencias -> asignacion .)


state 3

    (2) sentencias -> echo .

    $end            reduce using rule 2 (sentencias -> echo .)


state 4

    (3) sentencias -> funcion .

    $end            reduce using rule 3 (sentencias -> funcion .)


state 5

    (4) sentencias -> print .

    $end            reduce using rule 4 (sentencias -> print .)


state 6

    (5) sentencias -> operadorAritmetico .

    $end            reduce using rule 5 (sentencias -> operadorAritmetico .)


state 7

    (6) sentencias -> return .

    $end            reduce using rule 6 (sentencias -> return .)


state 8

    (7) sentencias -> estructurasDeDatos .

    $end            reduce using rule 7 (sentencias -> estructurasDeDatos .)


state 9

    (8) sentencias -> estructurasControl .

    $end            reduce using rule 8 (sentencias -> estructurasControl .)


state 10

    (9) sentencias -> operaciones .

    $end            reduce using rule 9 (sentencias -> operaciones .)


state 11

    (49) asignacion -> IDENTIFICADOR . ASIGNAR valor PUNTOCOMA
    (58) funcion -> IDENTIFICADOR . ASIGNAR NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (40) operaciones -> IDENTIFICADOR . ASIGNAR operaciones
    (83) queue -> IDENTIFICADOR . ASIGNAR NEW QUEUE PARENIZ PARENDER PUNTOCOMA
    (84) queue -> IDENTIFICADOR . FLECHASIMPLE ENQUEUE PARENIZ valor PARENDER PUNTOCOMA
    (85) queue -> IDENTIFICADOR . FLECHASIMPLE COUNT PARENIZ PARENDER PUNTOCOMA
    (86) queue -> IDENTIFICADOR . FLECHASIMPLE DEQUEUE PARENIZ PARENDER PUNTOCOMA
    (87) queue -> IDENTIFICADOR . FLECHASIMPLE NEXT PARENIZ PARENDER PUNTOCOMA
    (88) queue -> IDENTIFICADOR . FLECHASIMPLE REWIND PARENIZ PARENDER PUNTOCOMA
    (89) queue -> IDENTIFICADOR . FLECHASIMPLE CURRENT PARENIZ PARENDER PUNTOCOMA
    (90) queue -> IDENTIFICADOR . FLECHASIMPLE VALID PARENIZ PARENDER
    (77) stack -> IDENTIFICADOR . FLECHASIMPLE PUSH PARENIZ valor PARENDER PUNTOCOMA
    (78) stack -> IDENTIFICADOR . ASIGNAR NEW STACK PARENIZ PARENDER PUNTOCOMA
    (79) stack -> IDENTIFICADOR . FLECHASIMPLE NEXT PARENIZ PARENDER PUNTOCOMA
    (80) stack -> IDENTIFICADOR . FLECHASIMPLE REWIND PARENIZ PARENDER PUNTOCOMA
    (81) stack -> IDENTIFICADOR . FLECHASIMPLE CURRENT PARENIZ PARENDER PUNTOCOMA
    (82) stack -> IDENTIFICADOR . FLECHASIMPLE VALID PARENIZ PARENDER
    (91) array -> IDENTIFICADOR . ASIGNAR ARRAY PARENIZ valores PARENDER PUNTOCOMA
    (92) array -> IDENTIFICADOR . ASIGNAR CORCHETEIZ valores CORCHETEDER PUNTOCOMA
    (26) variable -> IDENTIFICADOR .

    ASIGNAR         shift and go to state 42
    FLECHASIMPLE    shift and go to state 43
    SUMA            reduce using rule 26 (variable -> IDENTIFICADOR .)
    RESTA           reduce using rule 26 (variable -> IDENTIFICADOR .)
    MULT            reduce using rule 26 (variable -> IDENTIFICADOR .)
    DIVISION        reduce using rule 26 (variable -> IDENTIFICADOR .)
    DIVISIONENTERA  reduce using rule 26 (variable -> IDENTIFICADOR .)
    MODULO          reduce using rule 26 (variable -> IDENTIFICADOR .)
    POTENCIA        reduce using rule 26 (variable -> IDENTIFICADOR .)


state 12

    (53) echo -> ECHO . valores PUNTOCOMA
    (10) valores -> . valor
    (11) valores -> . valor COMA valores
    (14) valor -> . NUMERO
    (15) valor -> . CADENA
    (16) valor -> . BOOLEAN
    (17) valor -> . IDENTIFICADOR
    (12) NUMERO -> . ENTERO
    (13) NUMERO -> . FLOTANTE

    CADENA          shift and go to state 47
    BOOLEAN         shift and go to state 48
    IDENTIFICADOR   shift and go to state 49
    ENTERO          shift and go to state 35
    FLOTANTE        shift and go to state 41

    valores                        shift and go to state 44
    valor                          shift and go to state 45
    NUMERO                         shift and go to state 46

state 13

    (54) funcion -> FUNCTION . NAMEFUNCTION PARENIZ parametro PARENDER LLAVEIZ

    NAMEFUNCTION    shift and go to state 50


state 14

    (57) funcion -> NAMEFUNCTION . PARENIZ parametro PARENDER PUNTOCOMA

    PARENIZ         shift and go to state 51


state 15

    (50) print -> PRINT . PARENIZ valores PARENDER PUNTOCOMA
    (51) print -> PRINT . valor PUNTOCOMA
    (52) print -> PRINT . PARENIZ PARENDER PUNTOCOMA
    (14) valor -> . NUMERO
    (15) valor -> . CADENA
    (16) valor -> . BOOLEAN
    (17) valor -> . IDENTIFICADOR
    (12) NUMERO -> . ENTERO
    (13) NUMERO -> . FLOTANTE

    PARENIZ         shift and go to state 52
    CADENA          shift and go to state 47
    BOOLEAN         shift and go to state 48
    IDENTIFICADOR   shift and go to state 49
    ENTERO          shift and go to state 35
    FLOTANTE        shift and go to state 41

    valor                          shift and go to state 53
    NUMERO                         shift and go to state 46

state 16

    (42) operadorAritmetico -> SUMA .

    $end            reduce using rule 42 (operadorAritmetico -> SUMA .)
    IDENTIFICADOR   reduce using rule 42 (operadorAritmetico -> SUMA .)
    ENTERO          reduce using rule 42 (operadorAritmetico -> SUMA .)
    FLOTANTE        reduce using rule 42 (operadorAritmetico -> SUMA .)


state 17

    (43) operadorAritmetico -> RESTA .

    $end            reduce using rule 43 (operadorAritmetico -> RESTA .)
    IDENTIFICADOR   reduce using rule 43 (operadorAritmetico -> RESTA .)
    ENTERO          reduce using rule 43 (operadorAritmetico -> RESTA .)
    FLOTANTE        reduce using rule 43 (operadorAritmetico -> RESTA .)


state 18

    (44) operadorAritmetico -> MULT .

    $end            reduce using rule 44 (operadorAritmetico -> MULT .)
    IDENTIFICADOR   reduce using rule 44 (operadorAritmetico -> MULT .)
    ENTERO          reduce using rule 44 (operadorAritmetico -> MULT .)
    FLOTANTE        reduce using rule 44 (operadorAritmetico -> MULT .)


state 19

    (45) operadorAritmetico -> DIVISION .

    $end            reduce using rule 45 (operadorAritmetico -> DIVISION .)
    IDENTIFICADOR   reduce using rule 45 (operadorAritmetico -> DIVISION .)
    ENTERO          reduce using rule 45 (operadorAritmetico -> DIVISION .)
    FLOTANTE        reduce using rule 45 (operadorAritmetico -> DIVISION .)


state 20

    (46) operadorAritmetico -> DIVISIONENTERA .

    $end            reduce using rule 46 (operadorAritmetico -> DIVISIONENTERA .)
    IDENTIFICADOR   reduce using rule 46 (operadorAritmetico -> DIVISIONENTERA .)
    ENTERO          reduce using rule 46 (operadorAritmetico -> DIVISIONENTERA .)
    FLOTANTE        reduce using rule 46 (operadorAritmetico -> DIVISIONENTERA .)


state 21

    (47) operadorAritmetico -> MODULO .

    $end            reduce using rule 47 (operadorAritmetico -> MODULO .)
    IDENTIFICADOR   reduce using rule 47 (operadorAritmetico -> MODULO .)
    ENTERO          reduce using rule 47 (operadorAritmetico -> MODULO .)
    FLOTANTE        reduce using rule 47 (operadorAritmetico -> MODULO .)


state 22

    (48) operadorAritmetico -> POTENCIA .

    $end            reduce using rule 48 (operadorAritmetico -> POTENCIA .)
    IDENTIFICADOR   reduce using rule 48 (operadorAritmetico -> POTENCIA .)
    ENTERO          reduce using rule 48 (operadorAritmetico -> POTENCIA .)
    FLOTANTE        reduce using rule 48 (operadorAritmetico -> POTENCIA .)


state 23

    (59) return -> RETURN . IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   shift and go to state 54


state 24

    (74) estructurasDeDatos -> queue .

    $end            reduce using rule 74 (estructurasDeDatos -> queue .)


state 25

    (75) estructurasDeDatos -> stack .

    $end            reduce using rule 75 (estructurasDeDatos -> stack .)


state 26

    (76) estructurasDeDatos -> array .

    $end            reduce using rule 76 (estructurasDeDatos -> array .)


state 27

    (60) estructurasControl -> while .

    $end            reduce using rule 60 (estructurasControl -> while .)


state 28

    (61) estructurasControl -> for .

    $end            reduce using rule 61 (estructurasControl -> for .)


state 29

    (62) estructurasControl -> if .

    $end            reduce using rule 62 (estructurasControl -> if .)


state 30

    (63) estructurasControl -> foreach .

    $end            reduce using rule 63 (estructurasControl -> foreach .)


state 31

    (64) estructurasControl -> switch .

    $end            reduce using rule 64 (estructurasControl -> switch .)


state 32

    (38) operaciones -> operacion .
    (39) operaciones -> operacion . operadorAritmetico operaciones
    (42) operadorAritmetico -> . SUMA
    (43) operadorAritmetico -> . RESTA
    (44) operadorAritmetico -> . MULT
    (45) operadorAritmetico -> . DIVISION
    (46) operadorAritmetico -> . DIVISIONENTERA
    (47) operadorAritmetico -> . MODULO
    (48) operadorAritmetico -> . POTENCIA

    $end            reduce using rule 38 (operaciones -> operacion .)
    SUMA            shift and go to state 16
    RESTA           shift and go to state 17
    MULT            shift and go to state 18
    DIVISION        shift and go to state 19
    DIVISIONENTERA  shift and go to state 20
    MODULO          shift and go to state 21
    POTENCIA        shift and go to state 22

    operadorAritmetico             shift and go to state 55

state 33

    (65) while -> WHILE . PARENIZ comparaciones PARENDER LLAVEIZ

    PARENIZ         shift and go to state 56


state 34

    (66) for -> FOR . PARENIZ IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ

    PARENIZ         shift and go to state 57


state 35

    (12) NUMERO -> ENTERO .

    SUMA            reduce using rule 12 (NUMERO -> ENTERO .)
    RESTA           reduce using rule 12 (NUMERO -> ENTERO .)
    MULT            reduce using rule 12 (NUMERO -> ENTERO .)
    DIVISION        reduce using rule 12 (NUMERO -> ENTERO .)
    DIVISIONENTERA  reduce using rule 12 (NUMERO -> ENTERO .)
    MODULO          reduce using rule 12 (NUMERO -> ENTERO .)
    POTENCIA        reduce using rule 12 (NUMERO -> ENTERO .)
    COMA            reduce using rule 12 (NUMERO -> ENTERO .)
    PUNTOCOMA       reduce using rule 12 (NUMERO -> ENTERO .)
    PARENDER        reduce using rule 12 (NUMERO -> ENTERO .)
    MAYORQUE        reduce using rule 12 (NUMERO -> ENTERO .)
    MAYORIGUALQUE   reduce using rule 12 (NUMERO -> ENTERO .)
    MENORQUE        reduce using rule 12 (NUMERO -> ENTERO .)
    MENORIGUALQUE   reduce using rule 12 (NUMERO -> ENTERO .)
    IDENTICO        reduce using rule 12 (NUMERO -> ENTERO .)
    NOIDENTICO      reduce using rule 12 (NUMERO -> ENTERO .)
    IGUAL           reduce using rule 12 (NUMERO -> ENTERO .)
    $end            reduce using rule 12 (NUMERO -> ENTERO .)
    CORCHETEDER     reduce using rule 12 (NUMERO -> ENTERO .)
    OPERADOR        reduce using rule 12 (NUMERO -> ENTERO .)
    AND             reduce using rule 12 (NUMERO -> ENTERO .)
    OR              reduce using rule 12 (NUMERO -> ENTERO .)
    DOSPUNTOS       reduce using rule 12 (NUMERO -> ENTERO .)


state 36

    (72) if -> IF . PARENIZ comparaciones PARENDER LLAVEIZ
    (73) if -> IF . PARENIZ IDENTIFICADOR PARENDER LLAVEIZ

    PARENIZ         shift and go to state 58


state 37

    (67) foreach -> FOREACH . PARENIZ IDENTIFICADOR AS IDENTIFICADOR PARENDER LLAVEIZ

    PARENIZ         shift and go to state 59


state 38

    (68) switch -> SWITCH . PARENIZ valor PARENDER LLAVEIZ casos DEFAULT DOSPUNTOS echo LLAVEDER

    PARENIZ         shift and go to state 60


state 39

    (41) operacion -> variable . operadorAritmetico variable
    (42) operadorAritmetico -> . SUMA
    (43) operadorAritmetico -> . RESTA
    (44) operadorAritmetico -> . MULT
    (45) operadorAritmetico -> . DIVISION
    (46) operadorAritmetico -> . DIVISIONENTERA
    (47) operadorAritmetico -> . MODULO
    (48) operadorAritmetico -> . POTENCIA

    SUMA            shift and go to state 16
    RESTA           shift and go to state 17
    MULT            shift and go to state 18
    DIVISION        shift and go to state 19
    DIVISIONENTERA  shift and go to state 20
    MODULO          shift and go to state 21
    POTENCIA        shift and go to state 22

    operadorAritmetico             shift and go to state 61

state 40

    (25) variable -> NUMERO .

    SUMA            reduce using rule 25 (variable -> NUMERO .)
    RESTA           reduce using rule 25 (variable -> NUMERO .)
    MULT            reduce using rule 25 (variable -> NUMERO .)
    DIVISION        reduce using rule 25 (variable -> NUMERO .)
    DIVISIONENTERA  reduce using rule 25 (variable -> NUMERO .)
    MODULO          reduce using rule 25 (variable -> NUMERO .)
    POTENCIA        reduce using rule 25 (variable -> NUMERO .)
    $end            reduce using rule 25 (variable -> NUMERO .)
    OPERADOR        reduce using rule 25 (variable -> NUMERO .)
    AND             reduce using rule 25 (variable -> NUMERO .)
    OR              reduce using rule 25 (variable -> NUMERO .)
    PARENDER        reduce using rule 25 (variable -> NUMERO .)


state 41

    (13) NUMERO -> FLOTANTE .

    SUMA            reduce using rule 13 (NUMERO -> FLOTANTE .)
    RESTA           reduce using rule 13 (NUMERO -> FLOTANTE .)
    MULT            reduce using rule 13 (NUMERO -> FLOTANTE .)
    DIVISION        reduce using rule 13 (NUMERO -> FLOTANTE .)
    DIVISIONENTERA  reduce using rule 13 (NUMERO -> FLOTANTE .)
    MODULO          reduce using rule 13 (NUMERO -> FLOTANTE .)
    POTENCIA        reduce using rule 13 (NUMERO -> FLOTANTE .)
    COMA            reduce using rule 13 (NUMERO -> FLOTANTE .)
    PUNTOCOMA       reduce using rule 13 (NUMERO -> FLOTANTE .)
    PARENDER        reduce using rule 13 (NUMERO -> FLOTANTE .)
    MAYORQUE        reduce using rule 13 (NUMERO -> FLOTANTE .)
    MAYORIGUALQUE   reduce using rule 13 (NUMERO -> FLOTANTE .)
    MENORQUE        reduce using rule 13 (NUMERO -> FLOTANTE .)
    MENORIGUALQUE   reduce using rule 13 (NUMERO -> FLOTANTE .)
    IDENTICO        reduce using rule 13 (NUMERO -> FLOTANTE .)
    NOIDENTICO      reduce using rule 13 (NUMERO -> FLOTANTE .)
    IGUAL           reduce using rule 13 (NUMERO -> FLOTANTE .)
    $end            reduce using rule 13 (NUMERO -> FLOTANTE .)
    CORCHETEDER     reduce using rule 13 (NUMERO -> FLOTANTE .)
    OPERADOR        reduce using rule 13 (NUMERO -> FLOTANTE .)
    AND             reduce using rule 13 (NUMERO -> FLOTANTE .)
    OR              reduce using rule 13 (NUMERO -> FLOTANTE .)
    DOSPUNTOS       reduce using rule 13 (NUMERO -> FLOTANTE .)


state 42

    (49) asignacion -> IDENTIFICADOR ASIGNAR . valor PUNTOCOMA
    (58) funcion -> IDENTIFICADOR ASIGNAR . NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (40) operaciones -> IDENTIFICADOR ASIGNAR . operaciones
    (83) queue -> IDENTIFICADOR ASIGNAR . NEW QUEUE PARENIZ PARENDER PUNTOCOMA
    (78) stack -> IDENTIFICADOR ASIGNAR . NEW STACK PARENIZ PARENDER PUNTOCOMA
    (91) array -> IDENTIFICADOR ASIGNAR . ARRAY PARENIZ valores PARENDER PUNTOCOMA
    (92) array -> IDENTIFICADOR ASIGNAR . CORCHETEIZ valores CORCHETEDER PUNTOCOMA
    (14) valor -> . NUMERO
    (15) valor -> . CADENA
    (16) valor -> . BOOLEAN
    (17) valor -> . IDENTIFICADOR
    (38) operaciones -> . operacion
    (39) operaciones -> . operacion operadorAritmetico operaciones
    (40) operaciones -> . IDENTIFICADOR ASIGNAR operaciones
    (12) NUMERO -> . ENTERO
    (13) NUMERO -> . FLOTANTE
    (41) operacion -> . variable operadorAritmetico variable
    (25) variable -> . NUMERO
    (26) variable -> . IDENTIFICADOR
